convert absolute links

--- a/ancestors-know/artists/joelle-joyner/index.html
+++ b/ancestors-know/artists/joelle-joyner/index.html
@@ -134,26 +134,26 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/joelle-joyner/index.css"
+      href="../../_app/i/assets/pages/artists/joelle-joyner/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/joelle-joyner/index.js"
+      href="../../_app/i/pages/artists/joelle-joyner/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
 
     <meta name="viewport" content="width=device-width" />
     <link
@@ -197,7 +197,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -242,7 +242,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -412,7 +412,7 @@
                     class="svelte-u3y2hv no-js slide-in-from-right"
                   >
                     <img
-                      src="/images/joelle-joyner.webp"
+                      src="../../images/joelle-joyner.webp"
                       width="600px"
                       alt="Black and white portrait of Joelle Joyner"
                       class="svelte-tuhwmi"
@@ -438,11 +438,11 @@
                           data-fancybox="single-1"
                           data-tweet-text="Joelle Joyner, Iris"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/joyner-iris-2x.webp"
-                          data-src="/images/joyner-iris-2x.webp"
+                          href="../../images/joyner-iris-2x.webp"
+                          data-src="../../images/joyner-iris-2x.webp"
                           data-caption="<div>Joelle Joyner (African American and Kauwets’a:ka [Meherrin] descent, b. 2000), <em>Iris</em>, 2020. Digital painting.</div>"
                           ><img
-                            src="/images/joyner-iris.webp"
+                            src="../../images/joyner-iris.webp"
                             width="600"
                             alt="Digital painting of an elder woman in lavender, her head ringed by a yellow halo, on a starry black and purple background"
                             class="svelte-tuhwmi"
@@ -530,11 +530,11 @@
                           data-fancybox="single-2"
                           data-tweet-text="Joelle Joyner, Marigold"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/joyner-marigold-2x.webp"
-                          data-src="/images/joyner-marigold-2x.webp"
+                          href="../../images/joyner-marigold-2x.webp"
+                          data-src="../../images/joyner-marigold-2x.webp"
                           data-caption="<div>Joelle Joyner (African American and Kauwets’a:ka [Meherrin] descent, b. 2000), <em>Marigold</em>, 2020. Digital painting.</div>"
                           ><img
-                            src="/images/joyner-marigold.webp"
+                            src="../../images/joyner-marigold.webp"
                             width="600"
                             alt="Digital painting of a young woman in red with a large yellow marigold in  long dark hair, backed by blue sky and green trees"
                             class="svelte-tuhwmi"
@@ -597,12 +597,12 @@
                     href="https://youtu.be/ZxWK3qS-IWA"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/ZxWK3qS-IWA&rel=0"
-                    data-poster="/images/joelle-joyner-video.webp"
+                    data-poster="../../images/joelle-joyner-video.webp"
                     ><span class="material-icons svelte-tuhwmi"
                       >play_arrow
                     </span>
                     <img
-                      src="/images/joelle-joyner-video.webp"
+                      src="../../images/joelle-joyner-video.webp"
                       alt="Joelle Joyner video interview"
                       class="svelte-tuhwmi"
                   /></a>
@@ -634,7 +634,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -646,7 +646,7 @@
                   class="svelte-kvuzze"
                 >
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -657,7 +657,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -670,7 +670,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -684,7 +684,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -696,7 +696,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -737,7 +737,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -753,13 +753,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -770,7 +770,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -779,7 +779,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -788,7 +788,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -797,7 +797,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -963,7 +963,7 @@
       </div>
 
       <!-- <script type="module" data-sveltekit-hydrate="vrmiam">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="vrmiam"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -986,7 +986,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
@@ -1025,7 +1025,7 @@ starts running -->
 
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="_app/i/pages/index.js"></script>
+  <script type="module" src="/_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
       compact: false,
