--- a/ancestors-know/artists/moira-pernambuco/index.html
+++ b/ancestors-know/artists/moira-pernambuco/index.html
@@ -134,26 +134,26 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/moira-pernambuco/index.css"
+      href="../../_app/i/assets/pages/artists/moira-pernambuco/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/moira-pernambuco/index.js"
+      href="../../_app/i/pages/artists/moira-pernambuco/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
@@ -196,7 +196,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -241,7 +241,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -409,7 +409,7 @@
                     class="svelte-u3y2hv no-js slide-in-from-right"
                   >
                     <img
-                      src="/images/moira-pernambuco-rgb.webp"
+                      src="../../images/moira-pernambuco-rgb.webp"
                       width="600px"
                       alt="A close-up photograph of a face is overlaid with semi-transparent images of several people and a map"
                       class="svelte-tuhwmi"
@@ -433,11 +433,11 @@
                           data-fancybox="single-1"
                           data-tweet-text="Moira Pernambuco, Daniel"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/pernambuco-daniel-2x.webp"
-                          data-src="/images/pernambuco-daniel-2x.webp"
+                          href="../../images/pernambuco-daniel-2x.webp"
+                          data-src="../../images/pernambuco-daniel-2x.webp"
                           data-caption="<div>Moira Pernambuco (African and Amerindian [Wapishana], b. 1969), <em>Daniel</em>, 2017. Photograph (Canon 7D body, manual lens, Voigtlander 28mm).</div>"
                           ><img
-                            src="/images/pernambuco-daniel.webp"
+                            src="../../images/pernambuco-daniel.webp"
                             width="600"
                             alt="Color photograph of a man with athletic build and curly brown chin-length hair, standing shirtless in front of a brown drape"
                             class="svelte-tuhwmi"
@@ -525,11 +525,11 @@
                           data-fancybox="single-2"
                           data-tweet-text="Moira Pernambuco, Troy"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/pernambuco-troy-2x.webp"
-                          data-src="/images/pernambuco-troy-2x.webp"
+                          href="../../images/pernambuco-troy-2x.webp"
+                          data-src="../../images/pernambuco-troy-2x.webp"
                           data-caption="<div>Moira Pernambuco (African and Amerindian [Wapishana], b. 1969), <em>Troy</em>, 1995. Black-and-white photograph (Mamiya 6x7 [medium format] camera).</div>"
                           ><img
-                            src="/images/pernambuco-troy.webp"
+                            src="../../images/pernambuco-troy.webp"
                             width="600"
                             alt="Black and white photograph of a young man wearing white shorts, lying on a bed with arms crossed and resting on his forehead"
                             class="svelte-tuhwmi"
@@ -625,12 +625,12 @@
                     href="https://youtu.be/WAzoRYAXyQA"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/WAzoRYAXyQA&rel=0"
-                    data-poster="/images/moira-pernambuco-video.webp"
+                    data-poster="../../images/moira-pernambuco-video.webp"
                     ><span class="material-icons svelte-tuhwmi"
                       >play_arrow
                     </span>
                     <img
-                      src="/images/moira-pernambuco-video.webp"
+                      src="../../images/moira-pernambuco-video.webp"
                       alt="Moira Pernambuco video interview"
                       class="svelte-tuhwmi"
                   /></a>
@@ -662,7 +662,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -674,7 +674,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -685,7 +685,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -697,7 +697,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -711,7 +711,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -723,7 +723,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -764,7 +764,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -780,13 +780,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -797,7 +797,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -806,7 +806,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -815,7 +815,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -824,7 +824,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -990,7 +990,7 @@
       </div>
 
       <!-- <script type="module" data-sveltekit-hydrate="cs3dms">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="cs3dms"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -1013,7 +1013,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
@@ -1051,7 +1051,7 @@ starts running -->
 </noscript> -->
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="_app/i/pages/index.js"></script>
+  <script type="module" src="/_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
       compact: false,
