--- a/ancestors-know/artists/monica-rickert-bolter/index.html
+++ b/ancestors-know/artists/monica-rickert-bolter/index.html
@@ -134,26 +134,26 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/joelle-joyner/index.css"
+      href="../../_app/i/assets/pages/artists/joelle-joyner/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/monica-rickert-bolter/index.js"
+      href="../../_app/i/pages/artists/monica-rickert-bolter/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
@@ -196,7 +196,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -241,7 +241,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -412,7 +412,7 @@
                     class="svelte-u3y2hv no-js slide-in-from-right"
                   >
                     <img
-                      src="/images/monica-rickert-bolter-rgb.webp"
+                      src="../../images/monica-rickert-bolter-rgb.webp"
                       width="600px"
                       alt="Color portrait of Monica Rickert Bolter"
                       class="svelte-tuhwmi"
@@ -436,11 +436,11 @@
                           data-fancybox="single-1"
                           data-tweet-text="Monica Rickert-Bolter, Mothers Uplifting"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/bolter-mothers-uplifting-2x.webp"
-                          data-src="/images/bolter-mothers-uplifting-2x.webp"
+                          href="../../images/bolter-mothers-uplifting-2x.webp"
+                          data-src="../../images/bolter-mothers-uplifting-2x.webp"
                           data-caption="<div>Monica Rickert-Bolter (Prairie Band Potawatomi, Black, and German, b. 1986), <em>Mothers Uplifting</em>, 2021. Pastel.</div>"
                           ><img
-                            src="/images/bolter-mothers-uplifting.webp"
+                            src="../../images/bolter-mothers-uplifting.webp"
                             width="600"
                             alt="Pastel drawing of four female silhouettes, purple with yellow auras, touching black, teal, purple and yellow swirling shapes"
                             class="svelte-tuhwmi"
@@ -549,11 +549,11 @@
                           data-fancybox="single-2"
                           data-tweet-text="Monica Rickert-Bolter, Hair Stories"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/bolter-hair-stories-2x.webp"
-                          data-src="/images/bolter-hair-stories-2x.webp"
+                          href="../../images/bolter-hair-stories-2x.webp"
+                          data-src="../../images/bolter-hair-stories-2x.webp"
                           data-caption="<div>Monica Rickert-Bolter (Prairie Band Potawatomi, Black, and German, b. 1986), <em>Hair Stories,</em> 2021. Digital painting.</div>"
                           ><img
-                            src="/images/bolter-hair-stories.webp"
+                            src="../../images/bolter-hair-stories.webp"
                             width="600"
                             alt="Digital painting sets silhouettes of female heads with varying hairstyles in concentric rings of purple, green, and gold"
                             class="svelte-tuhwmi"
@@ -665,7 +665,7 @@
                             >More from this author: </span
                           >
                           <a
-                            href="/reflections/black-native-identity-and-futurity#top"
+                            href="../reflections/black-native-identity-and-futurity#top"
                             class="svelte-tuhwmi"
                             >Black-Native Identity and Futurity</a
                           >
@@ -698,12 +698,12 @@
                     href="https://youtu.be/uviNTZb6TPE"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/uviNTZb6TPE&rel=0"
-                    data-poster="/images/monica-rickert-bolter-video.webp"
+                    data-poster="../../images/monica-rickert-bolter-video.webp"
                     ><span class="material-icons svelte-tuhwmi"
                       >play_arrow
                     </span>
                     <img
-                      src="/images/monica-rickert-bolter-video.webp"
+                      src="../../images/monica-rickert-bolter-video.webp"
                       alt="Monica Rickert Bolter video interview"
                       class="svelte-tuhwmi"
                   /></a>
@@ -735,7 +735,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -747,7 +747,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -758,7 +758,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -771,7 +771,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -785,7 +785,7 @@
                   class="svelte-kvuzze"
                 >
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -797,7 +797,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -838,7 +838,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -854,13 +854,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -871,7 +871,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -880,7 +880,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -889,7 +889,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -898,7 +898,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -1064,7 +1064,7 @@
       </div>
 
       <!-- <script type="module" data-sveltekit-hydrate="evve95">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="evve95"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -1087,7 +1087,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
