--- a/ancestors-know/artists/paige-pettibon/index.html
+++ b/ancestors-know/artists/paige-pettibon/index.html
@@ -134,26 +134,26 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/joelle-joyner/index.css"
+      href="../../_app/i/assets/pages/artists/joelle-joyner/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/paige-pettibon/index.js"
+      href="../../_app/i/pages/artists/paige-pettibon/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
@@ -196,7 +196,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -241,7 +241,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -406,7 +406,7 @@
                     class="svelte-u3y2hv no-js slide-in-from-right"
                   >
                     <img
-                      src="/images/paige-pettibon.webp"
+                      src="../../images/paige-pettibon.webp"
                       width="600px"
                       alt="Black and white portrait of Paige Pettibon"
                       class="svelte-tuhwmi"
@@ -430,12 +430,12 @@
                           data-fancybox="single-1"
                           data-tweet-text="Paige Pettibon, Rhoda, Richard, and Baby Richard"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/pettibon-rhoda-richard-baby-richard-2x.webp"
-                          data-src="/images/pettibon-rhoda-richard-baby-richard-2x.webp"
+                          href="../../images/pettibon-rhoda-richard-baby-richard-2x.webp"
+                          data-src="../../images/pettibon-rhoda-richard-baby-richard-2x.webp"
                           data-caption="<div>Paige Pettibon (Black, Salish, and white descent, b. 1987), <em>Rhoda, 
 						Richard, and Baby Richard</em>, 2019. Acrylic on canvas.</div>"
                           ><img
-                            src="/images/pettibon-rhoda-richard-baby-richard.webp"
+                            src="../../images/pettibon-rhoda-richard-baby-richard.webp"
                             width="600"
                             alt="Hyper-realistic black and white painting of a Native American mother and an African American father sitting with their baby"
                             class="svelte-tuhwmi"
@@ -537,13 +537,13 @@
                           data-fancybox="single-2"
                           data-tweet-text="Paige Pettibon, Soren Lake"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/pettibon-soren-lake-2x.webp"
-                          data-src="/images/pettibon-soren-lake-2x.webp"
+                          href="../../images/pettibon-soren-lake-2x.webp"
+                          data-src="../../images/pettibon-soren-lake-2x.webp"
                           data-caption="<div>Paige Pettibon (Black, Salish, and white descent, b. 1987), <em>Soren Lake</em>, 2021.
 						Acrylic on canvas.
 						</div>"
                           ><img
-                            src="/images/pettibon-soren-lake.webp"
+                            src="../../images/pettibon-soren-lake.webp"
                             width="600"
                             alt="Painting of a boy of Native American and African American heritage, wearing a blue collared shirt and hair in two long braids"
                             class="svelte-tuhwmi"
@@ -606,12 +606,12 @@
                     href="https://youtu.be/P2Ey4FBIP1w"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/P2Ey4FBIP1w&rel=0"
-                    data-poster="/images/paige-pettibon-video.webp"
+                    data-poster="../../images/paige-pettibon-video.webp"
                     ><span class="material-icons svelte-tuhwmi"
                       >play_arrow
                     </span>
                     <img
-                      src="/images/paige-pettibon-video.webp"
+                      src="../../images/paige-pettibon-video.webp"
                       alt="Paige Pettibon video interview"
                       class="svelte-tuhwmi"
                   /></a>
@@ -643,7 +643,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -655,7 +655,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -666,7 +666,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -679,7 +679,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -692,7 +692,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -704,7 +704,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -745,7 +745,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -761,13 +761,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -778,7 +778,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -787,7 +787,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -796,7 +796,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -805,7 +805,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -971,7 +971,7 @@
       </div>
 
       <!-- <script type="module" data-sveltekit-hydrate="4p53tp">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="4p53tp"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -995,7 +995,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
