--- a/ancestors-know/artists/rodslen-brown/index.html
+++ b/ancestors-know/artists/rodslen-brown/index.html
@@ -136,27 +136,27 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/rodslen-brown/index.css"
+      href="../../_app/i/assets/pages/artists/rodslen-brown/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/rodslen-brown/index.js"
+      href="../../_app/i/pages/artists/rodslen-brown/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-thumbnail.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-thumbnail.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
 
     <!--FANCY IMAGES META-->
     <meta name="viewport" content="width=device-width" />
@@ -200,7 +200,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -245,7 +245,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -404,7 +404,7 @@
                 <div>
                   <div style="transition-delay: 0s" class="svelte-u3y2hv no-js slide-in-from-right">
                     <img
-                      src="/images/rodslen-brown-rgb-450x450.webp"
+                      src="../../images/rodslen-brown-rgb-450x450.webp"
                       width="600px"
                       alt="Color portrait of Rodslen Brown"
                       class="svelte-tuhwmi"
@@ -426,7 +426,7 @@
                       <a
                         data-tweet-text="Rodslen Brown, Lace Moxie’s Purse"
                         class="lgallery svelte-tuhwmi"
-                        href="/images/brown-lace-moxie-001-2x.webp"
+                        href="../../images/brown-lace-moxie-001-2x.webp"
                         aria-label="Long description of the image: A contemporary
                         blue-and-brown basket purse woven from dyed and undyed
                         plant material. It has a wide, flat bottom, and the
@@ -445,10 +445,10 @@
                         reeds divided by a weft of blue reeds. This same
                         pattern is repeated on the sides of the purse."
                         data-fancybox="gallery"
-                        data-src="/images/brown-lace-moxie-001-2x.webp"
+                        data-src="../../images/brown-lace-moxie-001-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
-                          src="/images/brown-lace-moxie-001.webp"
+                          src="../../images/brown-lace-moxie-001.webp"
                           width="600"
                           alt="Blue and brown woven basket purse with flat base, open tapered top,  and curved handles, photographed on a black background"
                           class="svelte-tuhwmi"
@@ -479,13 +479,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-003-2x.webp"
+                        href="../../images/brown-lace-moxie-003-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-003-2x.webp"
+                        data-src="../../images/brown-lace-moxie-003-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-003-2x.webp"
+                          src="../../images/brown-lace-moxie-003-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -494,13 +494,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-004-2x.webp"
+                        href="../../images/brown-lace-moxie-004-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-004-2x.webp"
+                        data-src="../../images/brown-lace-moxie-004-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-004-2x.webp"
+                          src="../../images/brown-lace-moxie-004-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -509,13 +509,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-005-2x.webp"
+                        href="../../images/brown-lace-moxie-005-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-005-2x.webp"
+                        data-src="../../images/brown-lace-moxie-005-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-005-2x.webp"
+                          src="../../images/brown-lace-moxie-005-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -524,13 +524,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-007-2x.webp"
+                        href="../../images/brown-lace-moxie-007-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-007-2x.webp"
+                        data-src="../../images/brown-lace-moxie-007-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-007-2x.webp"
+                          src="../../images/brown-lace-moxie-007-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -539,13 +539,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-008-2x.webp"
+                        href="../../images/brown-lace-moxie-008-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-008-2x.webp"
+                        data-src="../../images/brown-lace-moxie-008-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-008-2x.webp"
+                          src="../../images/brown-lace-moxie-008-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -554,13 +554,13 @@
                         class="lgallery svelte-tuhwmi"
                         data-fancybox="gallery"
                         tabindex="-1"
-                        href="/images/brown-lace-moxie-c01-2x.webp"
+                        href="../../images/brown-lace-moxie-c01-2x.webp"
                         aria-label="Lace Moxie’s Purse, 2014"
-                        data-src="/images/brown-lace-moxie-c01-2x.webp"
+                        data-src="../../images/brown-lace-moxie-c01-2x.webp"
                         data-caption="Rodslen Brown (Black/Cherokee Nation of Oklahoma, 1960–2020), <em>Lace Moxie’s Purse,</em> 2014. Oklahoma. Root runners, flat reed, dye, hide. NMAI 27/0589"
                         ><img
                           class="hidden svelte-tuhwmi"
-                          src="/images/brown-lace-moxie-c01-2x.webp"
+                          src="../../images/brown-lace-moxie-c01-2x.webp"
                           width="600"
                           alt="Lace Moxie’s Purse, 2014"
                       /></a>
@@ -655,7 +655,7 @@
                     href="https://youtu.be/h1_R1ZXurCU"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/h1_R1ZXurCU&rel=0"
-                    data-poster="/images/rodslen-brown-video.webp"
+                    data-poster="../../images/rodslen-brown-video.webp"
                   >
                     <span class="material-icons svelte-tuhwmi">play_arrow</span>
                     <img
@@ -668,7 +668,7 @@
                 <a
                   target="_blank"
                   sveltekit:reload
-                  href="/transcripts/Ancestors-Know-Who-We-Are-Rodslen-Brown-video-r.pdf"
+                  href="../../transcripts/Ancestors-Know-Who-We-Are-Rodslen-Brown-video-r.pdf"
                   class="transcript svelte-tuhwmi"
                   >Transcript</a
                 >
@@ -683,7 +683,7 @@
                   class="svelte-kvuzze"
                 >
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -695,7 +695,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -706,7 +706,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -719,7 +719,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -733,7 +733,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -745,7 +745,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -786,7 +786,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -802,13 +802,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -819,7 +819,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -828,7 +828,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -837,7 +837,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -846,7 +846,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -1011,7 +1011,7 @@
         </div>
       </div>
 
-	</script> -->
+	</script>
     </div>
     <script
     src="https://code.jquery.com/jquery-3.7.1.js"
@@ -1040,7 +1040,7 @@
 
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="_app/i/pages/index.js"></script>
+  <script type="module" src="../../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="gallery"]', {
       compact: false,
