--- a/ancestors-know/artists/storme-webber/index.html
+++ b/ancestors-know/artists/storme-webber/index.html
@@ -134,26 +134,26 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/artists/storme-webber/index.css"
+      href="../../_app/i/assets/pages/artists/storme-webber/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/ArtistsMenu.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/ArtistsMenu.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="/_app/i/pages/artists/storme-webber/index.js"
+      href="../../_app/i/pages/artists/storme-webber/index.js"
     />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/lg-share.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/ArtistsMenu.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/lg-share.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/ArtistsMenu.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
@@ -196,7 +196,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -241,7 +241,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -412,7 +412,7 @@
                     class="svelte-u3y2hv no-js slide-in-from-right"
                   >
                     <img
-                      src="/images/storme-webber.webp"
+                      src="../../images/storme-webber.webp"
                       width="600px"
                       alt="Black and white multiple-exposure portrait shows several images of a person in suit coat, hat, and tie holding a cigarette"
                       class="svelte-tuhwmi"
@@ -436,12 +436,12 @@
                           data-fancybox="single-1"
                           data-tweet-text="Storme Webber, Ancestors Know Who We Are"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/webber-ancestors-know-2x.webp"
-                          data-src="/images/webber-ancestors-know-2x.webp"
+                          href="../../images/webber-ancestors-know-2x.webp"
+                          data-src="../../images/webber-ancestors-know-2x.webp"
                           data-caption="<div>Storme Webber (Alaskan Sugpiaq [Alutiiq] and Black descent, b. 1959), 
 						<em>Ancestors Know Who We Are,</em> 2016. Letterpress print.</div>"
                           ><img
-                            src="/images/webber-ancestors-know.webp"
+                            src="../../images/webber-ancestors-know.webp"
                             width="600"
                             alt="Framed print reads “Ancestors Know Who We Are” in black, all-caps centered text, on white, with each word on a separate line"
                             class="svelte-tuhwmi"
@@ -511,12 +511,12 @@
                           data-fancybox="single-2"
                           data-tweet-text="Storme Webber, My Beloveds"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/webber-my-beloveds-2x.webp"
-                          data-src="/images/webber-my-beloveds-2x.webp"
+                          href="../../images/webber-my-beloveds-2x.webp"
+                          data-src="../../images/webber-my-beloveds-2x.webp"
                           data-caption="<div>Storme Webber (Alaskan Sugpiaq [Alutiiq] and Black descent, b. 1959),
 						<em>My Beloveds</em>, 2016. Drypoint etching.</div>"
                           ><img
-                            src="/images/webber-my-beloveds.webp"
+                            src="../../images/webber-my-beloveds.webp"
                             width="600"
                             alt="Framed print of a black etching on white paper, showing a small crowd of people facing forward, some with only heads visible"
                             class="svelte-tuhwmi"
@@ -569,12 +569,12 @@
                           data-fancybox="single-3"
                           data-tweet-text="Storme Webber, Grace Notes"
                           class="lgallery svelte-tuhwmi"
-                          href="/images/webber-grace-notes-2x.webp"
-                          data-src="/images/webber-grace-notes-2x.webp"
+                          href="../../images/webber-grace-notes-2x.webp"
+                          data-src="../../images/webber-grace-notes-2x.webp"
                           data-caption="<div>Storme Webber (Alaskan Sugpiaq [Alutiiq] and Black descent, b. 1959), 
 						<em>Grace Notes</em>, 2016. Letterpress print.</div>"
                           ><img
-                            src="/images/webber-grace-notes.webp"
+                            src="../../images/webber-grace-notes.webp"
                             width="600"
                             alt="Framed print of an eight-line poem with black, all-lowercase lettering on a white background"
                             class="svelte-tuhwmi"
@@ -770,12 +770,12 @@
                     href="https://youtu.be/DN_uSXEMock"
                     class="lgallery svelte-tuhwmi"
                     data-src="https://youtu.be/DN_uSXEMock&rel=0"
-                    data-poster="/images/storme-webber-video.webp"
+                    data-poster="../../images/storme-webber-video.webp"
                     ><span class="material-icons svelte-tuhwmi"
                       >play_arrow
                     </span>
                     <img
-                      src="/images/storme-webber-video.webp"
+                      src="../../images/storme-webber-video.webp"
                       alt="Storme Webber video interview"
                       class="svelte-tuhwmi"
                   /></a>
@@ -807,7 +807,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
                   <img
-                    src="/images/rodslen-brown-grayscale-450x450.webp"
+                    src="../../images/rodslen-brown-grayscale-450x450.webp"
                     alt="Portrait of Rodslen Brown"
                     class="svelte-kvuzze"
                 /></a>
@@ -819,7 +819,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
                   <img
-                    src="/images/joelle-joyner.webp"
+                    src="../../images/joelle-joyner.webp"
                     alt="Portrait of Joelle Joyner"
                     class="svelte-kvuzze"
                 /></a>
@@ -830,7 +830,7 @@
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/moira-pernambuco-grayscale.webp"
+                    src="../../images/moira-pernambuco-grayscale.webp"
                     alt="Portrait of Moira Pernambuco"
                     class="svelte-kvuzze"
                   />
@@ -843,7 +843,7 @@
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
-                    src="/images/paige-pettibon.webp"
+                    src="../../images/paige-pettibon.webp"
                     alt="Portrait of Paige Pettibon"
                     class="svelte-kvuzze"
                   />
@@ -857,7 +857,7 @@
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
                   <img
-                    src="/images/monica-rickert-bolter-grayscale.webp"
+                    src="../../images/monica-rickert-bolter-grayscale.webp"
                     alt="Portrait of Monica Rickert Bolter"
                     class="svelte-kvuzze"
                 /></a>
@@ -869,7 +869,7 @@
                   class="svelte-kvuzze"
                 >
                   <img
-                    src="/images/storme-webber.webp"
+                    src="../../images/storme-webber.webp"
                     alt="Portrait of Storm Webber"
                     class="svelte-kvuzze"
                 /></a>
@@ -910,7 +910,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -926,13 +926,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -943,7 +943,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -952,7 +952,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -961,7 +961,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -970,7 +970,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -1159,7 +1159,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
@@ -1198,7 +1198,7 @@ starts running -->
 
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="_app/i/pages/index.js"></script>
+  <script type="module" src="../../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
       compact: false,
