--- a/ancestors-know/from-the-curator/index.html
+++ b/ancestors-know/from-the-curator/index.html
@@ -134,20 +134,23 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="/../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="/_app/i/assets/pages/from-the-curator/index.css"
+      href="../../_app/i/assets/pages/from-the-curator/index.css"
     />
-    <link rel="stylesheet" href="/_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="/_app/i/start.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="/_app/i/pages/__layout.js" />
-    <link rel="modulepreload" href="/_app/i/pages/from-the-curator/index.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js" />
+    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../../_app/i/start.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
+    <link
+      rel="modulepreload"
+      href="../../_app/i/pages/from-the-curator/index.js"
+    />
+    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
   </head>
 
   <body style="margin: 0">
@@ -185,7 +188,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="/images/logo-nmai-si-lockup.svg"
+              src="../../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -230,7 +233,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="/images/logo-nmai-si-lockup.svg"
+                    src="../../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -400,7 +403,7 @@
             <div class="reflect-img svelte-tuhwmi">
               <div class="svelte-tuhwmi">
                 <img
-                  src="/images/AKWWA_14.webp"
+                  src="../../images/AKWWA_14.webp"
                   alt="Color illustration of an Indigenous woman and a Black woman  standing with arms linked and the words “We Stand Together”"
                   class="svelte-tuhwmi"
                 />
@@ -465,7 +468,7 @@
             <div class="reflect-img-no-grid svelte-tuhwmi">
               <div class="svelte-tuhwmi">
                 <img
-                  src="/images/AKWWA_46.webp"
+                  src="../../images/AKWWA_46.webp"
                   alt="A crowd and dancers gather on  an open street covered with drawings, words, and flowers."
                   class="svelte-tuhwmi"
                 />
@@ -541,7 +544,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="/images/logo-because-of-her-story.svg"
+                    src="../../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -557,13 +560,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-nmai-stacked-horiz-white.svg"
+                    src="../../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="/images/logo-si-horiz-white.svg"
+                    src="../../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -574,7 +577,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-twitter.svg"
+                    src="../../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -583,7 +586,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-instagram.svg"
+                    src="../../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -592,7 +595,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-facebook.svg"
+                    src="../../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -601,7 +604,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="/images/icons-youtube.svg"
+                    src="../../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -790,8 +793,8 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
