--- a/ancestors-know/reflections/black-native-identity-and-futurity/index.html
+++ b/ancestors-know/reflections/black-native-identity-and-futurity/index.html
@@ -42,19 +42,19 @@
     
 
     <meta property="og:site_name" content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian" data-svelte="svelte-1v2a5gq">
-	<link rel="stylesheet" href="/_app/i/assets/pages/__layout.css">
-	<link rel="stylesheet" href="/_app/i/assets/pages/reflections/black-native-identity-and-futurity/index.css">
-	<link rel="stylesheet" href="/_app/i/assets/SlideIn.css">
-	<link rel="stylesheet" href="/_app/i/assets/Reflections.css">
-	<link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css">
-	<link rel="modulepreload" href="/_app/i/start.js">
-	<link rel="modulepreload" href="/_app/i/chunks/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/paths.js">
-	<link rel="modulepreload" href="/_app/i/pages/__layout.js">
-	<link rel="modulepreload" href="/_app/i/pages/reflections/black-native-identity-and-futurity/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/SlideIn.js">
-	<link rel="modulepreload" href="/_app/i/chunks/Reflections.js">
-	<link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js">
+	<link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css">
+	<link rel="stylesheet" href="../../_app/i/assets/pages/reflections/black-native-identity-and-futurity/index.css">
+	<link rel="stylesheet" href="../../_app/i/assets/SlideIn.css">
+	<link rel="stylesheet" href="../../_app/i/assets/Reflections.css">
+	<link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css">
+	<link rel="modulepreload" href="../../_app/i/start.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/index.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/paths.js">
+	<link rel="modulepreload" href="../../_app/i/pages/__layout.js">
+	<link rel="modulepreload" href="../../_app/i/pages/reflections/black-native-identity-and-futurity/index.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/Reflections.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js">
 </head>
 
 <body style="margin: 0;">
@@ -77,7 +77,7 @@
 
 <div id="top" class="wrap--outer svelte-62rfki"><div class="wrap--inner svelte-62rfki">
 
-<div class="default-header svelte-1xximcf"><img src="/images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-1xximcf"></div>
+<div class="default-header svelte-1xximcf"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-1xximcf"></div>
 
 <a href="#title" class="sr-only svelte-1xximcf">Skip to main content</a>
 
@@ -89,24 +89,24 @@
 <div class="header svelte-1xximcf">
 
 <details id="nav" class="svelte-gu3tcc"><summary class="level svelte-gu3tcc" tabindex="-1"><div class="logo svelte-gu3tcc"><a href="/" class=" svelte-gu3tcc" aria-label="Ancestors Know Who We Are">Ancestors <span class="svelte-gu3tcc">Know</span> Who We Are</a></div>
-    <div class="default-header--2 svelte-gu3tcc"><img src="/images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
+    <div class="default-header--2 svelte-gu3tcc"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
     <div class="toggle svelte-gu3tcc" tabindex="0"><svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
       <svg id="close" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-close" xlink="http://www.w3.org/1999/xlink"></use></svg></div></summary>
 
   <div id="nav-wrapper" class="svelte-gu3tcc"><nav aria-label="Main" class="svelte-gu3tcc"><ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/from-the-curator#top" class="svelte-gu3tcc">From the Curator</a></li>
         <li class="svelte-gu3tcc"><a href="/#artists" class="svelte-gu3tcc">Artists</a>
-          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/artists/rodslen-brown#top" class="svelte-gu3tcc">Rodslen Brown</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/joelle-joyner#top" class="svelte-gu3tcc">Joelle Joyner</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/moira-pernambuco#top" class="svelte-gu3tcc">Moira Pernambuco</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
+          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../artists/rodslen-brown#top" class="svelte-gu3tcc">Rodslen Brown</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/joelle-joyner#top" class="svelte-gu3tcc">Joelle Joyner</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/moira-pernambuco#top" class="svelte-gu3tcc">Moira Pernambuco</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
         <li class="svelte-gu3tcc"><a href="/#gallery" class="svelte-gu3tcc">Gallery</a></li>
         <li class="svelte-gu3tcc"><a href="/#reflections" class="svelte-gu3tcc">Reflections</a>
-          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/black-native-identity-and-futurity#top" class="svelte-gu3tcc">Black-Native Identity and Futurity</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/motherhood#top" class="svelte-gu3tcc">Motherhood</a></li></ul></li>
+          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/black-native-identity-and-futurity#top" class="svelte-gu3tcc">Black-Native Identity and Futurity</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/motherhood#top" class="svelte-gu3tcc">Motherhood</a></li></ul></li>
         <li class="svelte-gu3tcc"><a href="/#resources" class="svelte-gu3tcc">Resources</a></li></ul></nav></div>
 </details>
 </div>
@@ -175,7 +175,7 @@
 			resistance to speak to who we are and the peoples we come from.
 		</div></div></p></div>
 
-<div class="reflect-img svelte-15peso7"><div class="svelte-15peso7"><img src="/images/AKWWA_24.webp" alt="Black and white portrait of a woman with hair pulled back, in a light  dress with dark buttons and high collar" class="svelte-15peso7"></div>
+<div class="reflect-img svelte-15peso7"><div class="svelte-15peso7"><img src="../../images/AKWWA_24.webp" alt="Black and white portrait of a woman with hair pulled back, in a light  dress with dark buttons and high collar" class="svelte-15peso7"></div>
 	<p class="reflect-img-caption svelte-15peso7">Portrait of Zerviah Gould Mitchell (Wampanoag, 1807–1898), ca.
 		1850–1860. NMAI N15198. Mitchell, along with Ebenezer W. Pierce, wrote <em>Indian History, Biography, and Genealogy</em>, about the life of Wampanoag leader Massasoit and his descendants.
 	</p></div>
@@ -222,7 +222,7 @@
 			genocide and assimilation of Indigenous people.
 		</div></div></p></div>
 
-<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="/images/AKWWA_26.webp" alt="Black and white of a man, two women, and a baby seated outdoors" class="svelte-15peso7">
+<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="../../images/AKWWA_26.webp" alt="Black and white of a man, two women, and a baby seated outdoors" class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Frank G. Speck</div></div>
 	<p class="reflect-img-caption svelte-15peso7">A Chickahominy family in Virginia, 1918. NMAI N12600
 	</p></div>
@@ -254,7 +254,7 @@
 			intersectional identity we get to bask in.
 		</div></div></p></div>
 
-<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="/images/AKWWA_27.webp" alt="Color portrait of a man and a woman, holding hands, standing outdoors in front of a large reddish-brown mountain" class="svelte-15peso7">
+<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="../../images/AKWWA_27.webp" alt="Color portrait of a man and a woman, holding hands, standing outdoors in front of a large reddish-brown mountain" class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Courtesy of Dilara Onur</div></div>
 	<p class="reflect-img-caption svelte-15peso7">Maya Bernadett (Tohono O’odham/Black/Mexican/white) and her husband Drew
 		Harris (Tohono O’odham/Black), 2021
@@ -268,7 +268,7 @@
 
 
 
-<div><div style="transition-delay: 500ms" class="svelte-u3y2hv  no-js slide-in-from-center"><img src="/images/amber-starks-melanin-mvskoke.webp" alt="portrait of Amber Starks" class="svelte-15peso7">
+<div><div style="transition-delay: 500ms" class="svelte-u3y2hv  no-js slide-in-from-center"><img src="../../images/amber-starks-melanin-mvskoke.webp" alt="portrait of Amber Starks" class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Photo by Amber Starks (a.k.a. Melanin Mvskoke)
 		</div></div></div>
 	<p class="reflect-img-caption svelte-15peso7"><span class="svelte-15peso7">Amber Starks, a.k.a. Melanin Mvskoke, (Black/Muscogee Creek)</span> is
@@ -283,14 +283,14 @@
 		struggles.
 	</p></div>
 
-<div id="reflections-nav" class="svelte-15peso7"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"><span class="svelte-51v5yi">Afro-Indigenous Relations in a Reimagined Future</span>
-      <img id="essay1" src="/images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
+<div id="reflections-nav" class="svelte-15peso7"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"><span class="svelte-51v5yi">Afro-Indigenous Relations in a Reimagined Future</span>
+      <img id="essay1" src="../../images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/art-gender-and-identity#top"><span class="svelte-51v5yi">Art, Gender, and Identity</span>
-      <img id="essay2" src="/images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
+      <img id="essay2" src="../../images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="/reflections/black-native-identity-and-futurity#top"><span class="svelte-51v5yi">Black-Native Identity and Futurity</span>
-      <img id="essay3" src="/images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
+      <img id="essay3" src="../../images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/motherhood#top"><span class="svelte-51v5yi">Motherhood</span>
-      <img id="essay4" src="/images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
+      <img id="essay4" src="../../images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
 </div></div>
 
 <!-- <div class="subfoot--promotional-banner svelte-6qmn7o"><p class="svelte-6qmn7o"><b class="svelte-6qmn7o">Your opinion matters!</b>
@@ -306,14 +306,14 @@
       <p class="svelte-1u4zws">This project received support from the Smithsonian American Women’s
         History Initiative.
       </p>
-      <div class="svelte-1u4zws"><img src="/images/logo-because-of-her-story.svg" alt="Logo Because of her story" class="svelte-1u4zws"></div></div></div>
+      <div class="svelte-1u4zws"><img src="../../images/logo-because-of-her-story.svg" alt="Logo Because of her story" class="svelte-1u4zws"></div></div></div>
 
-  <div id="nmai" class="svelte-1u4zws"><div class="logo svelte-1u4zws" tabindex="0"><a href="https://americanindian.si.edu/" tabindex="-1" aria-label="National Museum of the American Indian" class="svelte-1u4zws"><img src="/images/logo-nmai-stacked-horiz-white.svg" alt="Logo National Museum of the American Indian" class="svelte-1u4zws"></a>
-      <span class="svelte-1u4zws"><img src="/images/logo-si-horiz-white.svg" alt="Logo Smithsonian" class="svelte-1u4zws"></span></div>
-    <div class="icons svelte-1u4zws"><a href="https://twitter.com/SmithsonianNMAI" aria-label="Twitter" class="svelte-1u4zws"><img src="/images/icons-twitter.svg" alt="Twitter" class="svelte-1u4zws"></a>
-      <a href="https://www.instagram.com/smithsoniannmai/" aria-label="Instagram" class="svelte-1u4zws"><img src="/images/icons-instagram.svg" alt="Instagram" class="svelte-1u4zws"></a>
-      <a href="https://www.facebook.com/NationalMuseumOfTheAmericanIndian/" aria-label="Facebook" class="svelte-1u4zws"><img src="/images/icons-facebook.svg" alt="Facebook" class="svelte-1u4zws"></a>
-      <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="/images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
+  <div id="nmai" class="svelte-1u4zws"><div class="logo svelte-1u4zws" tabindex="0"><a href="https://americanindian.si.edu/" tabindex="-1" aria-label="National Museum of the American Indian" class="svelte-1u4zws"><img src="../../images/logo-nmai-stacked-horiz-white.svg" alt="Logo National Museum of the American Indian" class="svelte-1u4zws"></a>
+      <span class="svelte-1u4zws"><img src="../../images/logo-si-horiz-white.svg" alt="Logo Smithsonian" class="svelte-1u4zws"></span></div>
+    <div class="icons svelte-1u4zws"><a href="https://twitter.com/SmithsonianNMAI" aria-label="Twitter" class="svelte-1u4zws"><img src="../../images/icons-twitter.svg" alt="Twitter" class="svelte-1u4zws"></a>
+      <a href="https://www.instagram.com/smithsoniannmai/" aria-label="Instagram" class="svelte-1u4zws"><img src="../../images/icons-instagram.svg" alt="Instagram" class="svelte-1u4zws"></a>
+      <a href="https://www.facebook.com/NationalMuseumOfTheAmericanIndian/" aria-label="Facebook" class="svelte-1u4zws"><img src="../../images/icons-facebook.svg" alt="Facebook" class="svelte-1u4zws"></a>
+      <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="../../images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
     <div class="menu svelte-1u4zws"><a href="https://www.si.edu/privacy/" class="svelte-1u4zws">Privacy</a><span class="svelte-1u4zws">|</span><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws">Terms of Use</a><span class="svelte-1u4zws">|</span>© 2022 Smithsonian Institution
     </div></div>
   <script async src="https://static.addtoany.com/menu/page.js"></script>
@@ -334,7 +334,7 @@
 
 
 		<!-- <script type="module" data-sveltekit-hydrate="zzhgft">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="zzhgft"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -358,8 +358,8 @@ src="https://code.jquery.com/jquery-3.7.1.js"
 integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 crossorigin="anonymous"
 ></script>
-<script src="/_app/i/assets/check-visible.js"></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+<script src="../../_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
