--- a/ancestors-know/reflections/motherhood/index.html
+++ b/ancestors-know/reflections/motherhood/index.html
@@ -42,19 +42,19 @@
     
 
     <meta property="og:site_name" content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian" data-svelte="svelte-1v2a5gq">
-	<link rel="stylesheet" href="/_app/i/assets/pages/__layout.css">
-	<link rel="stylesheet" href="/_app/i/assets/pages/reflections/black-native-identity-and-futurity/index.css">
-	<link rel="stylesheet" href="/_app/i/assets/SlideIn.css">
-	<link rel="stylesheet" href="/_app/i/assets/Reflections.css">
-	<link rel="stylesheet" href="/_app/i/assets/SurveyBanner.css">
-	<link rel="modulepreload" href="/_app/i/start.js">
-	<link rel="modulepreload" href="/_app/i/chunks/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/paths.js">
-	<link rel="modulepreload" href="/_app/i/pages/__layout.js">
-	<link rel="modulepreload" href="/_app/i/pages/reflections/motherhood/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/SlideIn.js">
-	<link rel="modulepreload" href="/_app/i/chunks/Reflections.js">
-	<link rel="modulepreload" href="/_app/i/chunks/SurveyBanner.js">
+	<link rel="stylesheet" href="../../_app/i/assets/pages/__layout.css">
+	<link rel="stylesheet" href="../../_app/i/assets/pages/reflections/black-native-identity-and-futurity/index.css">
+	<link rel="stylesheet" href="../../_app/i/assets/SlideIn.css">
+	<link rel="stylesheet" href="../../_app/i/assets/Reflections.css">
+	<link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css">
+	<link rel="modulepreload" href="../../_app/i/start.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/index.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/paths.js">
+	<link rel="modulepreload" href="../../_app/i/pages/__layout.js">
+	<link rel="modulepreload" href="../../_app/i/pages/reflections/motherhood/index.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/Reflections.js">
+	<link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js">
 </head>
 
 <body style="margin: 0;">
@@ -77,7 +77,7 @@
 
 <div id="top" class="wrap--outer svelte-62rfki"><div class="wrap--inner svelte-62rfki">
 
-<div class="default-header svelte-1xximcf"><img src="/images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-1xximcf"></div>
+<div class="default-header svelte-1xximcf"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-1xximcf"></div>
 
 <a href="#title" class="sr-only svelte-1xximcf">Skip to main content</a>
 
@@ -89,24 +89,24 @@
 <div class="header svelte-1xximcf">
 
 <details id="nav" class="svelte-gu3tcc"><summary class="level svelte-gu3tcc" tabindex="-1"><div class="logo svelte-gu3tcc"><a href="/" class=" svelte-gu3tcc" aria-label="Ancestors Know Who We Are">Ancestors <span class="svelte-gu3tcc">Know</span> Who We Are</a></div>
-    <div class="default-header--2 svelte-gu3tcc"><img src="/images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
+    <div class="default-header--2 svelte-gu3tcc"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
     <div class="toggle svelte-gu3tcc" tabindex="0"><svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
       <svg id="close" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-close" xlink="http://www.w3.org/1999/xlink"></use></svg></div></summary>
 
   <div id="nav-wrapper" class="svelte-gu3tcc"><nav aria-label="Main" class="svelte-gu3tcc"><ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/from-the-curator#top" class="svelte-gu3tcc">From the Curator</a></li>
         <li class="svelte-gu3tcc"><a href="/#artists" class="svelte-gu3tcc">Artists</a>
-          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/artists/rodslen-brown#top" class="svelte-gu3tcc">Rodslen Brown</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/joelle-joyner#top" class="svelte-gu3tcc">Joelle Joyner</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/moira-pernambuco#top" class="svelte-gu3tcc">Moira Pernambuco</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
-            <li class="svelte-gu3tcc"><a href="/artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
+          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../artists/rodslen-brown#top" class="svelte-gu3tcc">Rodslen Brown</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/joelle-joyner#top" class="svelte-gu3tcc">Joelle Joyner</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/moira-pernambuco#top" class="svelte-gu3tcc">Moira Pernambuco</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
+            <li class="svelte-gu3tcc"><a href="../../artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
         <li class="svelte-gu3tcc"><a href="/#gallery" class="svelte-gu3tcc">Gallery</a></li>
         <li class="svelte-gu3tcc"><a href="/#reflections" class="svelte-gu3tcc">Reflections</a>
-          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/black-native-identity-and-futurity#top" class="svelte-gu3tcc">Black-Native Identity and Futurity</a></li>
-            <li class="svelte-gu3tcc"><a href="/reflections/motherhood#top" class="svelte-gu3tcc">Motherhood</a></li></ul></li>
+          <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/black-native-identity-and-futurity#top" class="svelte-gu3tcc">Black-Native Identity and Futurity</a></li>
+            <li class="svelte-gu3tcc"><a href="../../reflections/motherhood#top" class="svelte-gu3tcc">Motherhood</a></li></ul></li>
         <li class="svelte-gu3tcc"><a href="/#resources" class="svelte-gu3tcc">Resources</a></li></ul></nav></div>
 </details>
 </div>
@@ -175,7 +175,7 @@
 			in my father’s home state of Maryland.
 		</div></div></p></div>
 
-<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="/images/AKWWA_23.webp" alt="Two men and two women pose outdoors; one woman is wearing a white wedding dress and veil." class="svelte-15peso7">
+<div class="reflect-img-no-grid svelte-15peso7"><div class="svelte-15peso7"><img src="../../images/AKWWA_23.webp" alt="Two men and two women pose outdoors; one woman is wearing a white wedding dress and veil." class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Courtesy of Lillian Sparks Robinson</div></div>
 	<p class="reflect-img-caption svelte-15peso7">Lillian Sparks Robinson at her wedding with her husband, Corey Robinson, and
 		her parents, Georgeline Brushbreaker Sparks (Oglala and Sicangu Lakota) and
@@ -221,7 +221,7 @@
 			associations.
 		</div></div></p></div>
 
-<div class="reflect-img svelte-15peso7"><div class="svelte-15peso7"><img src="/images/AKWWA_22.webp" alt="A man, young boy, and woman seated together on a couch" class="svelte-15peso7">
+<div class="reflect-img svelte-15peso7"><div class="svelte-15peso7"><img src="../../images/AKWWA_22.webp" alt="A man, young boy, and woman seated together on a couch" class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Permission from Baltimore Sun Media. All rights reserved.
 		</div></div>
 	<p class="reflect-img-caption svelte-15peso7">Lillian Sparks Robinson at home in Maryland with her husband, Corey
@@ -272,7 +272,7 @@
 
 
 
-<div><div style="transition-delay: 500ms" class="svelte-u3y2hv  no-js slide-in-from-center"><img src="/images/lillian-sparks-robinson.webp" alt="portrait of Lillian sparks Robinson" class="svelte-15peso7">
+<div><div style="transition-delay: 500ms" class="svelte-u3y2hv  no-js slide-in-from-center"><img src="../../images/lillian-sparks-robinson.webp" alt="portrait of Lillian sparks Robinson" class="svelte-15peso7">
 		<div class="reflect-credit svelte-15peso7">Courtesy of Lillian Sparks Robinson</div></div></div>
 	<p class="reflect-img-caption svelte-15peso7"><span class="svelte-15peso7">LILLIAN SPARKS ROBINSON (Black/Sicangu Lakota)</span> is a member of
 		the Rosebud Sioux Tribe. She has devoted her 20-year career in Washington,
@@ -287,13 +287,13 @@
 	</p></div>
 
 <div id="reflections-nav" class="svelte-15peso7"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"><span class="svelte-51v5yi">Afro-Indigenous Relations in a Reimagined Future</span>
-      <img id="essay1" src="/images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
+      <img id="essay1" src="../../images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/art-gender-and-identity#top"><span class="svelte-51v5yi">Art, Gender, and Identity</span>
-      <img id="essay2" src="/images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
+      <img id="essay2" src="../../images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/black-native-identity-and-futurity#top"><span class="svelte-51v5yi">Black-Native Identity and Futurity</span>
-      <img id="essay3" src="/images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
+      <img id="essay3" src="../../images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
   <div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="/reflections/motherhood#top"><span class="svelte-51v5yi">Motherhood</span>
-      <img id="essay4" src="/images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
+      <img id="essay4" src="../../images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
 </div></div>
 
 <!-- <div class="subfoot--promotional-banner svelte-6qmn7o"><p class="svelte-6qmn7o"><b class="svelte-6qmn7o">Your opinion matters!</b>
@@ -309,14 +309,14 @@
       <p class="svelte-1u4zws">This project received support from the Smithsonian American Women’s
         History Initiative.
       </p>
-      <div class="svelte-1u4zws"><img src="/images/logo-because-of-her-story.svg" alt="Logo Because of her story" class="svelte-1u4zws"></div></div></div>
+      <div class="svelte-1u4zws"><img src="../../images/logo-because-of-her-story.svg" alt="Logo Because of her story" class="svelte-1u4zws"></div></div></div>
 
-  <div id="nmai" class="svelte-1u4zws"><div class="logo svelte-1u4zws" tabindex="0"><a href="https://americanindian.si.edu/" tabindex="-1" aria-label="National Museum of the American Indian" class="svelte-1u4zws"><img src="/images/logo-nmai-stacked-horiz-white.svg" alt="Logo National Museum of the American Indian" class="svelte-1u4zws"></a>
-      <span class="svelte-1u4zws"><img src="/images/logo-si-horiz-white.svg" alt="Logo Smithsonian" class="svelte-1u4zws"></span></div>
-    <div class="icons svelte-1u4zws"><a href="https://twitter.com/SmithsonianNMAI" aria-label="Twitter" class="svelte-1u4zws"><img src="/images/icons-twitter.svg" alt="Twitter" class="svelte-1u4zws"></a>
-      <a href="https://www.instagram.com/smithsoniannmai/" aria-label="Instagram" class="svelte-1u4zws"><img src="/images/icons-instagram.svg" alt="Instagram" class="svelte-1u4zws"></a>
-      <a href="https://www.facebook.com/NationalMuseumOfTheAmericanIndian/" aria-label="Facebook" class="svelte-1u4zws"><img src="/images/icons-facebook.svg" alt="Facebook" class="svelte-1u4zws"></a>
-      <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="/images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
+  <div id="nmai" class="svelte-1u4zws"><div class="logo svelte-1u4zws" tabindex="0"><a href="https://americanindian.si.edu/" tabindex="-1" aria-label="National Museum of the American Indian" class="svelte-1u4zws"><img src="../../images/logo-nmai-stacked-horiz-white.svg" alt="Logo National Museum of the American Indian" class="svelte-1u4zws"></a>
+      <span class="svelte-1u4zws"><img src="../../images/logo-si-horiz-white.svg" alt="Logo Smithsonian" class="svelte-1u4zws"></span></div>
+    <div class="icons svelte-1u4zws"><a href="https://twitter.com/SmithsonianNMAI" aria-label="Twitter" class="svelte-1u4zws"><img src="../../images/icons-twitter.svg" alt="Twitter" class="svelte-1u4zws"></a>
+      <a href="https://www.instagram.com/smithsoniannmai/" aria-label="Instagram" class="svelte-1u4zws"><img src="../../images/icons-instagram.svg" alt="Instagram" class="svelte-1u4zws"></a>
+      <a href="https://www.facebook.com/NationalMuseumOfTheAmericanIndian/" aria-label="Facebook" class="svelte-1u4zws"><img src="../../images/icons-facebook.svg" alt="Facebook" class="svelte-1u4zws"></a>
+      <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="../../images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
     <div class="menu svelte-1u4zws"><a href="https://www.si.edu/privacy/" class="svelte-1u4zws">Privacy</a><span class="svelte-1u4zws">|</span><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws">Terms of Use</a><span class="svelte-1u4zws">|</span>© 2022 Smithsonian Institution
     </div></div>
   <script async src="https://static.addtoany.com/menu/page.js"></script>
@@ -337,7 +337,7 @@
 
 
 		<!-- <script type="module" data-sveltekit-hydrate="1d7oana">
-		import { start } from "/_app/i/start.js";
+		import { start } from "../../_app/i/start.js";
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="1d7oana"]').parentNode,
 			paths: {"base":"","assets":""},
@@ -361,8 +361,8 @@ src="https://code.jquery.com/jquery-3.7.1.js"
 integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 crossorigin="anonymous"
 ></script>
-<script src="/_app/i/assets/check-visible.js"></script>
-    <script src="/_app/i/assets/check-visible.js"></script>
+<script src="../../_app/i/assets/check-visible.js"></script>
+    <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
